fix for all feedback